# ai_ecommerce_scraper

./: README.md  api.txt  pyproject.toml  test.ipynb  test.py
ecommerce/data_parsing/: iterator_parser.py
ecommerce/scraper_data/: functions.py
ecommerce/src_base_scraper/: product_info.py  requests_handler.py  scraper.py  scraper_builder.py
